Move to ForgeGradle 6, update gradle config, remove lombok

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,25 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+# Mod Details
+mod_version=1.0
+mod_group_id=moe.krp.shungite
+mod_id=shungite
+mod_name=Shungite
+mod_author=tut
+mod_description=Protect yourself from all the frequencies and unwanted frequencies in your Minecraft world.
+mod_license=All Rights Reserved
+
+# Minecraft / Forge / Parchment
+minecraft_version=1.19.2
+minecraft_version_range=[1.19.2,)
+pack_format_number=9
+
+forge_version=43.2.21
+forge_gradle_version_range=[6.0,6.2)
+loader_version_range=[43,)
+forge_version_range=[43.2,)
+
+mapping_channel=parchment
+mapping_version=2022.11.27-1.19.2
